Patch 1.1.5:
- Bugfixes
- Minor QoL changes